--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DoctorsApp</string>
     <string name="consult_only_with_a_ndoctor_you_trust">Consult only with a<font color='#1FC29D'>\nDoctor you trust</font></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
